<resources>
    <string name="app_name">Sensor</string>
    <string name="task_sensor">Task Sensor</string>
    <string name="type_accelerometer">TYPE_ACCELEROMETER</string>
    <string name="type_ambient_temperature">TYPE_AMBIENT_TEMPERATURE</string>
    <string name="type_gravity">TYPE_GRAVITY</string>
    <string name="type_gyroscope">TYPE_GYROSCOPE</string>
    <string name="type_light">TYPE_LIGHT</string>
    <string name="type_linear_acceleration">TYPE_LINEAR_ACCELERATION</string>
    <string name="type_magnetic_field">TYPE_MAGNETIC_FIELD</string>
    <string name="type_orientation">❗ TYPE_ORIENTATION</string>
    <string name="type_pressure">TYPE_PRESSURE</string>
    <string name="type_proximity">TYPE_PROXIMITY</string>
    <string name="type_relative_humidity">TYPE_RELATIVE_HUMIDITY</string>
    <string name="type_rotation_vector">TYPE_ROTATION_VECTOR</string>
    <string name="type_temperature">❗ TYPE_TEMPERATURE</string>

    <string name="tv">⚙ MAINTENANCE ⚙</string>
    <string name="temp">This constant was deprecated in API level 15.\n
use Sensor.TYPE_AMBIENT_TEMPERATURE instead.</string>
    <string name="orie">This constant was deprecated in API level 15.\n
use SensorManager.getOrientation() instead.</string>
    <string name="list_sensor">List Sensor</string>
    <string name="about">About</string>
    <string name="sensor_list">Sensor List</string>
    <string name="hasan">Ahmad Abu Hasan \n 117227007</string>
    <string name="fuad">Muhammad Amirul Fuad \n 117227027</string>

    <string name="pitch_sensor">Pitch Sensor: %1$.2f</string>
    <string name="roll_sensor">Roll Sensor: %1$.2f</string>
    <string name="no_sensor">No motion sensor available</string>

</resources>